--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site web du projet Back To Back">
-    <title>Back To Back</title>
+    <title>Back To Back - Accueil</title>
+    <link rel="icon" href="public/img/favicon.webp">
     <link rel="stylesheet" href="background.css" type="text/css"/>
 </head>
 <body>
