Page livre + vérification

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </article>
             <article>
                 <img src="./public/img/Rectangle_3_3.webp" alt="Image d'illustration de l'article 3 : Legends Never Die">
-                <h2>LDN, les vraies légendes ne meurent jamais</h2>
+                <h2>LND, les vraies légendes ne meurent jamais</h2>
                 <a href="musique_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 3 : Legends Never Die">
                 </a>
