Page Contact + vérification + Correction & ajout

--- a/apropos_fr.html
+++ b/apropos_fr.html
@@ -31,7 +31,9 @@
         <p>Dans le futur, j’aimerai pourquoi pas fonder mon entreprise de création de contenus.</p>
         <p>Enfin bref, c’est tout pour moi...</p>
         <p>Pour encore et toujours plus d’infos sur moi, n’hésitez pas à me suivre sur les réseaux</p>
-        <img src="./public/img/Mes_réseaux.webp" alt="Boutton pour me rejoindre sur les réseaux">
+        <a href="https://bit.ly/3BpvxD1" target="_blank">
+            <img src="./public/img/Mes_réseaux.webp" alt="Bouton pour me rejoindre sur mes réseaux">
+        </a>
     </main>
     <footer>
         <img src="./public/img/BACK_TO_BACK_petit.webp" alt="logo Back To Back (en petit)">
@@ -51,22 +53,22 @@
         <a href="mailto:gaspardbondy@hotmail.fr">gaspardbondy@hotmail.fr</a>
 
         <h4>NOUS SUIVRE</h4>
-        <a href="https://www.youtube.com/channel/UCLF_US4rxEGbDht_SYWZgwQ">
+        <a href="https://www.youtube.com/channel/UCLF_US4rxEGbDht_SYWZgwQ" target="_blank">
             <img src="./public/img/ytb_1.webp" alt="Logo YouTube">
         </a>
-        <a href="https://twitter.com/GaspardTex">
-            <img src="./public/img/twitter_1.webp" alt="Logo Twitter">
+        <a href="https://twitter.com/GaspardTex" target="_blank">
+            <img src="./public/img/twitter_1.webp" alt="Logo Twitter" target="_blank">
         </a>
-        <a href="https://www.twitch.tv/gaspardtex">
-            <img src="./public/img/twitch_1.webp" alt="Logo Twitch">
+        <a href="https://www.twitch.tv/gaspardtex" target="_blank">
+            <img src="./public/img/twitch_1.webp" alt="Logo Twitch" target="_blank">
         </a>
-        <a href="https://www.instagram.com/gaspardtex/?hl=fr">
+        <a href="https://www.instagram.com/gaspardtex/?hl=fr" target="_blank">
             <img src="./public/img/insta_1.webp" alt="Logo Instagram">
         </a>
 
         <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de montbéliard</p>
     
-        <a href="http://mmimontbeliard.com/">
+        <a href="http://mmimontbeliard.com/" target="_blank">
             <img src="./public/img/MMI_1.webp" alt="Logo MMI de Montbéliard">
         </a>
     </footer>
