--- a/livre_fr.html
+++ b/livre_fr.html
@@ -119,22 +119,22 @@
         <a href="mailto:gaspardbondy@hotmail.fr">gaspardbondy@hotmail.fr</a>
 
         <h4>NOUS SUIVRE</h4>
-        <a href="https://www.youtube.com/channel/UCLF_US4rxEGbDht_SYWZgwQ">
+        <a href="https://www.youtube.com/channel/UCLF_US4rxEGbDht_SYWZgwQ" target="_blank">
             <img src="./public/img/ytb_1.webp" alt="Logo YouTube">
         </a>
-        <a href="https://twitter.com/GaspardTex">
+        <a href="https://twitter.com/GaspardTex" target="_blank">
             <img src="./public/img/twitter_1.webp" alt="Logo Twitter">
         </a>
-        <a href="https://www.twitch.tv/gaspardtex">
+        <a href="https://www.twitch.tv/gaspardtex" target="_blank">
             <img src="./public/img/twitch_1.webp" alt="Logo Twitch">
         </a>
-        <a href="https://www.instagram.com/gaspardtex/?hl=fr">
+        <a href="https://www.instagram.com/gaspardtex/?hl=fr" target="_blank">
             <img src="./public/img/insta_1.webp" alt="Logo Instagram">
         </a>
 
         <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de montbéliard</p>
     
-        <a href="http://mmimontbeliard.com/">
+        <a href="http://mmimontbeliard.com/" target="_blank">
             <img src="./public/img/MMI_1.webp" alt="Logo MMI de Montbéliard">
         </a>
     </footer>
