--- a/film_fr.html
+++ b/film_fr.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Site web du projet Back To Back">
     <title>Back To Back - Top Gun</title>
     <link rel="icon" href="./public/img/favicon.webp">
-    <link rel="stylesheet" href="background.css" type="text/css"/>
+    <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
     </header>
     
     <main>
-        <p>
+        <p class="style-intro-article">
         Vous devez sûrement connaître la franchise « Top Gun »,
         2 films superbes qui parlent avant tout d’aviation,
         on se retrouve plongé dans une école de combat aérien de la marine américaine.
