--- a/index_en.html
+++ b/index_en.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site web du projet Back To Back">
     <title>Back To Back - Home</title>
-    <link rel="stylesheet" href="background.css" type="text/css"/>
+    <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
     <header>
