--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Site web du projet Back To Back">
     <title>Back To Back - Accueil</title>
     <link rel="icon" href="./public/img/favicon.webp">
-    <link rel="stylesheet" href="background.css" type="text/css"/>
+    <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
     <header>
@@ -22,51 +22,51 @@
     </header>
     
     <main>
-        <p>Vous voulez savoir comment c’était à 
+        <p class="style-intro-article">Vous voulez savoir comment c’était à 
             notre époque en 2022 ? Eh bien, ce site 
             est fait pour vous ! Retrouvez comment
             les combats dans le monde était perçu
             à l’époque. Si vous lisez ses lignes c’est
              que vous avez gagné ou pas...</p>
             
-             <article>
+            <article>
             <img src="./public/img/Rectangle_3_5.webp" alt="Image d'illustration de l'article 1 : Top Gun">
-            <h3>Top Gun, un combat pour notre monde</h3>
+            <h3 class="style-article-home">Top Gun, un combat pour notre monde</h3>
             <a href="film_fr.html">
             <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 1 : Top Gun">
             </a>
             </article>
             <article>
                 <img src="./public/img/Rectangle_3_4.webp" alt="Image d'illustration de l'article 2 : État d'urgence">
-                <h3>État d'urgence, cette histoire pourrait-elle devenir une réalité ?</h3>
+                <h3 class="style-article-home">État d'urgence, cette histoire pourrait-elle devenir une réalité ?</h3>
                 <a href="livre_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 2 : État d'urgence">
                 </a>
             </article>
             <article>
                 <img src="./public/img/Rectangle_3_3.webp" alt="Image d'illustration de l'article 3 : Legends Never Die">
-                <h3>LND, les vraies légendes ne meurent jamais</h3>
+                <h3 class="style-article-home">LND, les vraies légendes ne meurent jamais</h3>
                 <a href="musique_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 3 : Legends Never Die">
                 </a>
             </article>
             <article>
                 <img src="./public/img/Rectangle_3_2.webp" alt="Image d'illustration de l'article 4 : Besançon">
-                <h3>Besançon, la ville au coeur de l'évolution</h3>
+                <h3 class="style-article-home">Besançon, la ville au coeur de l'évolution</h3>
                 <a href="lieu_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 4 : Besançon">
                 </a>
             </article>
             <article>
                 <img src="./public/img/Rectangle_3_1.webp" alt="Image d'illustration de l'article 5 : Sauvez la planète">
-                <h3>Sauvez la planète, devient-il un enjeu important ?</h3>
+                <h3 class="style-article-home">Sauvez la planète, devient-il un enjeu important ?</h3>
                 <a href="espoir_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 5 : Sauvez la planète">
                 </a>
             </article>
             <article>
                 <img src="./public/img/Rectangle_3.webp" alt="Image d'illustration de l'article 6 : Le réchauffement climatique">
-                <h3>Le réchauffement climatique, il faut agir ! et maintenant !</h3>
+                <h3 class="style-article-home">Le réchauffement climatique, il faut agir ! et maintenant !</h3>
                 <a href="regret_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 6 : Le réchauffement climatique">
                 </a>
