--- a/livre_fr.html
+++ b/livre_fr.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Site web du projet Back To Back">
     <title>Back To Back - État d'urgence</title>
     <link rel="icon" href="./public/img/favicon.webp">
-    <link rel="stylesheet" href="background.css" type="text/css"/>
+    <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
     <header>
