--- a/en/index_en.html
+++ b/en/index_en.html
@@ -10,15 +10,14 @@
 </head>
 <body>
     <header>
-        <a href="index_en.html">
-            <img src="./public/img/home_1.webp" alt="Icône du bouton home">
+        <a href="/en/index_en.html">
+            <img src="../public/img/home_1.webp" alt="Icône du bouton home">
         </a>
-        <img src="./public/img/BACK_TO_BACK.webp" alt="logo du site internet Back To Back">
-        <img src="./public/img/bouton_menu_1.webp" alt="Icône du bouton menu">
-        <a href="index.html">
-            <img src="public/img/Boutton_Language_en.webp" alt="Bouton changement de langue EN->FR">
+        <img src="../public/img/BACK_TO_BACK.webp" alt="logo du site internet Back To Back">
+        <img src="../public/img/bouton_menu_1.webp" alt="Icône du bouton menu">
+        <a href="/index.html">
+            <img src="../public/img/Boutton_Language_en.webp" alt="Bouton changement de langue EN->FR">
         </a>
     </header>
-    
 </body>
 </html>
