--- a/fr/apropos_fr.html
+++ b/fr/apropos_fr.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a class="home-header"href="index.html">
+        <a class="home-header"href="../index.html">
             <img src="../public/icone/home.svg" alt="Icône du bouton home">
         </a>
         <img class="menu-header" src="../public/icone/bouton_menu.svg" alt="Icône du bouton menu">
@@ -19,8 +19,14 @@
             <img src="../public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
         <img class="btb-header" src="../public/icone/BACK_TO_BACK.svg" alt="logo du site internet Back To Back">
-        <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
-        <h1 class="h1-header">À propos</h1>
+        <div class="element-header">
+            <div class="element-header-image">
+                <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
+            </div>
+            <div class="element-header-texte-1">
+                <h1 class="h1-header">À propos</h1>
+            </div>
+        </div>
     </header>
     <main>
         <img src="../public/img/Avatar_1.webp" alt="Avatar de l'auteur du site">
