--- a/fr/film_fr.html
+++ b/fr/film_fr.html
@@ -11,20 +11,23 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">
-            <img src="../public/img/home_1.webp" alt="Icône du bouton home">
+        <a class="home-header"href="../index.html">
+            <img src="../public/icone/home.svg" alt="Icône du bouton home">
         </a>
-        <img src="../public/img/BACK_TO_BACK.webp" alt="logo du site internet Back To Back">
-        <img src="../public/img/bouton_menu_1.webp" alt="Icône du bouton menu">
-        <a href="/en/index_en.html">
-            <img src="../public/img/Boutton_Language_fr.webp" alt="Bouton changement de langue FR->EN">
+        <img class="menu-header" src="../public/icone/bouton_menu.svg" alt="Icône du bouton menu">
+        <a class="language-header"href="../en/index_en.html">
+            <img src="../public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
-
-        <img src="../public/img/Round_Face.webp" alt="Image Face Round">
-        <h1>Top Gun</h1>
-
+        <img class="btb-header" src="../public/icone/BACK_TO_BACK.svg" alt="logo du site internet Back To Back">
+        <div class="element-header">
+            <div class="element-header-image">
+                <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
+            </div>
+            <div class="element-header-texte-5">
+                <h1 class="h1-header">Top Gun</h1>
+            </div>
+        </div>
     </header>
-    
     <main>
         <p class="style-intro-article">
         Vous devez sûrement connaître la franchise « Top Gun »,
