--- a/fr/espoir_fr.html
+++ b/fr/espoir_fr.html
@@ -11,16 +11,22 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">
-            <img src="../public/img/home_1.webp" alt="Icône du bouton home">
+        <a class="home-header"href="../index.html">
+            <img src="../public/icone/home.svg" alt="Icône du bouton home">
         </a>
-        <img src="../public/img/BACK_TO_BACK.webp" alt="logo du site internet Back To Back">
-        <img src="../public/img/bouton_menu_1.webp" alt="Icône du bouton menu">
-        <a href="/en/index_en.html">
-            <img src="../public/img/Boutton_Language_fr.webp" alt="Bouton changement de langue FR->EN">
+        <img class="menu-header" src="../public/icone/bouton_menu.svg" alt="Icône du bouton menu">
+        <a class="language-header"href="../en/index_en.html">
+            <img src="../public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
-        <img src="../public/img/Round_Face.webp" alt="Image Face round">
-        <h1>Sauvez la planète</h1>
+        <img class="btb-header" src="../public/icone/BACK_TO_BACK.svg" alt="logo du site internet Back To Back">
+        <div class="element-header">
+            <div class="element-header-image">
+                <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
+            </div>
+            <div class="element-header-texte-4">
+                <h1 class="h1-header">Sauvez la planète</h1>
+            </div>
+        </div>
     </header>
     <main>
         <p>Comme vous le constatez aujourd’hui, le monde va mal, la planète va mal. Il faut faire quelque chose ! Selon nous, sauvez la planète serait un espoir, l’espoir de donner aux futurs génération une planète propre et en bonne santé. Mais bon on ne va pas se le cacher, c’est mal parti.</p>
