CSS Page d'accueil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     
     <main>
-        <p class="style-intro-article">Vous voulez savoir comment c’était à 
+        <p class="intro-accueil-fr">Vous voulez savoir comment c’était à 
             notre époque en 2022 ? Eh bien, ce site 
             est fait pour vous ! Retrouvez comment
             les combats dans le monde était perçu
@@ -31,43 +31,43 @@
              que vous avez gagné ou pas...</p>
             
             <article>
-            <img src="./public/img/Rectangle_3_5.webp" alt="Image d'illustration de l'article 1 : Top Gun">
-            <h3 class="style-article-home">Top Gun, un combat pour notre monde</h3>
+            <img class="article-right-accueil-fr" src="./public/img/Rectangle_3_5.webp" alt="Image d'illustration de l'article 1 : Top Gun">
+            <h3 class="texte-article-right-accueil-fr">Top Gun, un combat pour notre monde</h3>
             <a href="/fr/film_fr.html">
             <img src = "/public/icone/Button_Article_fr.svg" alt="Bouton Article 1 : Top Gun">
             </a>
             </article>
             <article>
-                <img src="./public/img/Rectangle_3_4.webp" alt="Image d'illustration de l'article 2 : État d'urgence">
-                <h3 class="style-article-home">État d'urgence, cette histoire pourrait-elle devenir une réalité ?</h3>
+                <img class="article-left-accueil-fr" src="./public/img/Rectangle_3_4.webp" alt="Image d'illustration de l'article 2 : État d'urgence">
+                <h3 class="texte-article-left-accueil-fr">État d'urgence, cette histoire pourrait-elle devenir une réalité ?</h3>
                 <a href="/fr/livre_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 2 : État d'urgence">
                 </a>
             </article>
             <article>
-                <img src="./public/img/Rectangle_3_3.webp" alt="Image d'illustration de l'article 3 : Legends Never Die">
-                <h3 class="style-article-home">LND, les vraies légendes ne meurent jamais</h3>
+                <img class="article-right-accueil-fr" src="./public/img/Rectangle_3_3.webp" alt="Image d'illustration de l'article 3 : Legends Never Die">
+                <h3 class="texte-article-right-accueil-fr">LND, les vraies légendes ne meurent jamais</h3>
                 <a href="/fr/musique_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 3 : Legends Never Die">
                 </a>
             </article>
             <article>
-                <img src="./public/img/Rectangle_3_2.webp" alt="Image d'illustration de l'article 4 : Besançon">
-                <h3 class="style-article-home">Besançon, la ville au coeur de l'évolution</h3>
+                <img class="article-left-accueil-fr" src="./public/img/Rectangle_3_2.webp" alt="Image d'illustration de l'article 4 : Besançon">
+                <h3 class="texte-article-left-accueil-fr">Besançon, la ville au coeur de l'évolution</h3>
                 <a href="/fr/lieu_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 4 : Besançon">
                 </a>
             </article>
             <article>
-                <img src="./public/img/Rectangle_3_1.webp" alt="Image d'illustration de l'article 5 : Sauvez la planète">
-                <h3 class="style-article-home">Sauvez la planète, devient-il un enjeu important ?</h3>
+                <img class="article-right-accueil-fr" src="./public/img/Rectangle_3_1.webp" alt="Image d'illustration de l'article 5 : Sauvez la planète">
+                <h3 class="texte-article-right-accueil-fr">Sauvez la planète, devient-il un enjeu important ?</h3>
                 <a href="/fr/espoir_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 5 : Sauvez la planète">
                 </a>
             </article>
             <article>
-                <img src="./public/img/Rectangle_3.webp" alt="Image d'illustration de l'article 6 : Le réchauffement climatique">
-                <h3 class="style-article-home">Le réchauffement climatique, il faut agir ! et maintenant !</h3>
+                <img class="article-left-accueil-fr" src="./public/img/Rectangle_3.webp" alt="Image d'illustration de l'article 6 : Le réchauffement climatique">
+                <h3 class="texte-article-left-accueil-fr">Le réchauffement climatique, il faut agir ! et maintenant !</h3>
                 <a href="/fr/regret_fr.html">
                 <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 6 : Le réchauffement climatique">
                 </a>
