Boutton HTML + CSS

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img class="article-right-accueil-fr" src="./public/img/Rectangle_3_5.webp" alt="Image d'illustration de l'article 1 : Top Gun">
             <h3 class="texte-article-right-accueil-fr">Top Gun, un combat pour notre monde</h3>
             <a href="/fr/film_fr.html">
-            <img src = "/public/icone/Button_Article_fr.svg" alt="Bouton Article 1 : Top Gun">
+            <button class="boutton-right-article-fr">Lire l'article</button>
             </a>
             </article>
             <article>
