--- a/fr/apropos_fr.html
+++ b/fr/apropos_fr.html
@@ -8,6 +8,10 @@
     <title>Back To Back - À propos</title>
     <link rel="icon" href="../public/img/favicon.webp">
     <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
+    <link href="https://unpkg.com/cloudinary-video-player@1.9.4/dist/cld-video-player.min.css" 
+    rel="stylesheet">
+<script src="https://unpkg.com/cloudinary-video-player@1.9.4/dist/cld-video-player.min.js" 
+    type="text/javascript"></script>
 </head>
 <body>
     <header>
@@ -40,6 +44,15 @@
         <a href="https://bit.ly/3BpvxD1" target="_blank">
             <img src="../public/img/Mes_réseaux.webp" alt="Bouton pour me rejoindre sur mes réseaux">
         </a>
+
+        <video
+            width=400
+            height=200
+            id="example-player"
+            controls
+            muted
+            class="cld-video-player cld-video-player-skin-dark">
+        </video>
     </main>
     <footer>
         
@@ -87,5 +100,12 @@
             <img src="../public/icone/MMI.svg" alt="Logo MMI de Montbéliard">
         </a>
     </footer>
+    <script>
+
+        var cld = cloudinary.videoPlayer('example-player', { 
+            cloud_name: 'dkgnswhxe', //remplacer par votre id cloudinary 
+            sourceTypes: ['hls','dash','webm/vp9','mp4/h265','mp4']});
+        cld.source('https://res.cloudinary.com/dkgnswhxe/video/upload/v1669882797/Top_Gun_Maverick_bande_annonce_uwdr2i.mp4'); //à remplacer après avoir uploader une vidéo
+    </script>
 </body>
 </html>
