--- a/index.html
+++ b/index.html
@@ -41,35 +41,35 @@
                 <img class="article-left-accueil-fr" src="./public/img/Rectangle_3_4.webp" alt="Image d'illustration de l'article 2 : État d'urgence">
                 <h3 class="texte-article-left-accueil-fr">État d'urgence, cette histoire pourrait-elle devenir une réalité ?</h3>
                 <a href="/fr/livre_fr.html">
-                <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 2 : État d'urgence">
+                    <button class="boutton-left-article-fr">Lire l'article</button>
                 </a>
             </article>
             <article>
                 <img class="article-right-accueil-fr" src="./public/img/Rectangle_3_3.webp" alt="Image d'illustration de l'article 3 : Legends Never Die">
                 <h3 class="texte-article-right-accueil-fr">LND, les vraies légendes ne meurent jamais</h3>
                 <a href="/fr/musique_fr.html">
-                <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 3 : Legends Never Die">
+                    <button class="boutton-right-article-fr">Lire l'article</button>
                 </a>
             </article>
             <article>
                 <img class="article-left-accueil-fr" src="./public/img/Rectangle_3_2.webp" alt="Image d'illustration de l'article 4 : Besançon">
                 <h3 class="texte-article-left-accueil-fr">Besançon, la ville au coeur de l'évolution</h3>
                 <a href="/fr/lieu_fr.html">
-                <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 4 : Besançon">
+                    <button class="boutton-left-article-fr">Lire l'article</button>
                 </a>
             </article>
             <article>
                 <img class="article-right-accueil-fr" src="./public/img/Rectangle_3_1.webp" alt="Image d'illustration de l'article 5 : Sauvez la planète">
                 <h3 class="texte-article-right-accueil-fr">Sauvez la planète, devient-il un enjeu important ?</h3>
                 <a href="/fr/espoir_fr.html">
-                <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 5 : Sauvez la planète">
+                    <button class="boutton-right-article-fr">Lire l'article</button>
                 </a>
             </article>
             <article>
                 <img class="article-left-accueil-fr" src="./public/img/Rectangle_3.webp" alt="Image d'illustration de l'article 6 : Le réchauffement climatique">
                 <h3 class="texte-article-left-accueil-fr">Le réchauffement climatique, il faut agir ! et maintenant !</h3>
                 <a href="/fr/regret_fr.html">
-                <img src = "./public/img/Button_Article_1.webp" alt="Bouton Article 6 : Le réchauffement climatique">
+                    <button class="boutton-left-article-fr">Lire l'article</button>
                 </a>
             </article>
     </main>
