--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
-    <header>
-        <a class="home-header"href="index.html">
-            <img src="./public/icone/home.svg" alt="Icône du bouton home">
-        </a>
-        <img class="menu-header" src="./public/icone/bouton_menu.svg" alt="Icône du bouton menu">
-        <a class="language-header"href="./en/index_en.html">
+    <header class="header_fr">
+        <div class="element_header_fr">
+            <a class="home_header_fr" href="index.html">
+                <img src="./public/icone/home.svg" alt="Icône du bouton home">
+            </a>
+            <img class="menu_header_fr" src="./public/icone/bouton_menu.svg" alt="Icône du bouton menu">
+        </div>
+        <a class="language_header_fr"href="./en/index_en.html">
             <img src="./public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
-        <img class="btb-header" src="./public/icone/BACK_TO_BACK.svg" alt="logo du site internet Back To Back">
-        
+        <h2 class="btb_header_fr">Back To Back</h2>
     </header>
-    
     <main>
         <p class="intro-accueil-fr">Vous voulez savoir comment c’était à 
             notre époque en 2022 ? Eh bien, ce site 
