Menu page d'accueil

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/public/img/favicon.webp">
     <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
-<body>
+<body class=" ">
     <header class="header_fr">
         <div class="element_header_fr">
             <a class="home_header_fr" href="index.html">
@@ -17,10 +17,27 @@
             </a>
             <img class="menu_header_fr" src="./public/icone/bouton_menu.svg" alt="Icône du bouton menu">
         </div>
-        <a class="language_header_fr"href="./en/index_en.html">
+        <a class="language_header_fr" href="./en/index_en.html">
             <img src="./public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
         <h2 class="btb_header_fr">Back To Back</h2>
+        <div class="nav_toogle" onclick="document.documentElement.classList.toggle('menu_fr_open')">
+            <div class="nav_toogle_bar"></div>
+        </div>
+        <nav class="menu_fr">
+            <ul>
+                <li><a href="fr/film_fr.html">> Top Gun</a></li>
+                <li><a href="fr/livre_fr.html">> État d'urgence</a></li>
+                <li><a href="fr/musique_fr.html">> LND</a></li>
+                <li><a href="fr/lieu_fr.html">> Besançon</a></li>
+                <li><a href="fr/espoir_fr.html">> Sauver la planète</a></li>
+                <li><a href="fr/regret_fr.html">> Le réchauffement climatique</a></li>
+                <li><a href="fr/glossaire_fr.html">> Glossaire</a></li>
+                <li><a href="fr/autreprojets_fr.html">> Autre projets</a></li>
+                <li><a href="fr/apropos_fr.html">> À propos</a></li>
+                <li><a href="fr/contact_fr.html">> Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <p class="intro-accueil-fr">Vous voulez savoir comment c’était à 
