CSS Page film fr

--- a/fr/film_fr.html
+++ b/fr/film_fr.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
 <body>
-    <header class="header_fr">
+    <header class="header_fr_2">
         <div class="element_header_fr">
             <a class="home_header_fr" href="/index.html">
                 <img src="/public/icone/home.svg" alt="Icône du bouton home">
@@ -49,7 +49,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="film_main">
         <p class="film_article_intro">
         Vous devez sûrement connaître la franchise « Top Gun »,
         2 films superbes qui parlent avant tout d’aviation,
@@ -57,94 +57,96 @@
         Vous ne connaissez pas Top Gun ? Cet article est fait pour vous !
         </p>
 
-        <img class="film_article_image_1" src="../public/img/Image_Top_Gun_1.webp" alt="Image d'illustration de Top Gun">
+        <img class="film_article_image_primary" src="../public/img/Image_Top_Gun_1.webp" alt="Image d'illustration de Top Gun">
         
         <article>
-        <h3>Top Gun, c'est quoi ?</h3>
-        <p>
+        <h3 class="film_article_texte_tittle">Top Gun, c'est quoi ?</h3>
+        <p class="film_article_texte_content">
         Quand on prononce juste ses deux mots cela résume tout un sens, 
         tout un regard pour les films d’action, car oui c’est un film d’action avec beaucoup d’effets spéciaux et de scène/plan à couper le souffle qui a marqué le cinéma. 
         Il existe pour l’instant 2 films pour cette franchise, Top Gun sorti en 1986 est celui qui a propulsé la carrière au cinéma de l’acteur principale Tom Cruise. Mais aussi, 
         Top Gun Maverick la suite du premier de 1986 sorti récemment en 2022, il est sans doute encore disponible dans le cinéma le plus proche de chez vous à l’heure où vous lisez ses lignes.
         </p>
 
-        <img src="../public/img/Top_Gun_1986.webp" alt="Jaquette du film Top Gun de 1986">
-        <h3>Jaquette du film de 1986</h3>
+        <img class="film_article_image_secondary" src="../public/img/Top_Gun_1986.webp" alt="Jaquette du film Top Gun de 1986">
+        <h3 class="film_article_texte_tittle_center">Jaquette du film de 1986</h3>
         </article>
         <article>
-            <h3>1986</h3>
-            <p>Voici un petit résumé du film de 1986. (spoiler alert)</p>
-            <p>"L'histoire se passe à la fin des années 1980, durant les dernières années de la guerre froide.
+            <h3 class="film_article_texte_tittle">1986</h3>
+            <p class="film_article_texte_content">Voici un petit résumé du film de 1986. (spoiler alert)</p>
+            <p class="film_article_texte_content">"L'histoire se passe à la fin des années 1980, durant les dernières années de la guerre froide.
                 Pendant une patrouille aérienne de routine, deux chasseurs rencontrent deux autres avions considérés comme hostiles par leur hiérarchie. Mais tout ne va pas se passer comme prévu."
             </p>
-            <p>Pour vous préserver, nous n'allons pas dévoiler la suite.
+            <p class="film_article_texte_content">Pour vous préserver, nous n'allons pas dévoiler la suite.
                Cependant, si l'envie vous prend de connaître le film en intégralité,
                nous vous invitons à regarder Top Gun (1986) !
             </p>
-            <img src="../public/img/Top_Gun_2022.webp" alt="Jaquette du film Top Gun de 2022">
-            <h3>Jaquette du film de 2022</h3>
+            <img class="film_article_image_secondary" src="../public/img/Top_Gun_2022.webp" alt="Jaquette du film Top Gun de 2022">
+            <h3 class="film_article_texte_tittle_center">Jaquette du film de 2022</h3>
         </article>
         <article>
-            <h3>2022</h3>
-            <p>Toujours pas convaincu ? He bien voici un résumé de la suite sorti en 2022. (spoiler alert)</p>
-            <p>« Le pilote de chasse et capitaine de vaisseau « Maverick » est de retour. 
+            <h3 class="film_article_texte_tittle">2022</h3>
+            <p class="film_article_texte_content">Toujours pas convaincu ? He bien voici un résumé de la suite sorti en 2022. (spoiler alert)</p>
+            <p class="film_article_texte_content">« Le pilote de chasse et capitaine de vaisseau « Maverick » est de retour. 
                 (déjà présent en 1986) après 30 ans de service, 
                 il se retrouve pilote d’essai pour tester un nouveau prototype d’avion supersonique. 
                 Celui-ci pouvant dépasser la vitesse Mach 11 (autrement dit 11 fois la vitesse du son)
                  mais encore une fois un problème va venir se confronter au pilote. Va-t-il réussir ?»
             </p>
-            <p>Encore une fois pour la suite il faudra vous rendre dans un cinéma.
+            <p class="film_article_texte_content">Encore une fois pour la suite il faudra vous rendre dans un cinéma.
                  Nous ne voulons pas être responsable d’un « spoil de masse ».</p>
-            <img src="../public/img/Tony_Scoot.webp" alt="Photo de Tony Scoot">
-            <img src="../public/img/Joseph_Kosinski.webp" alt="Photo de Joseph Kosinski">
-            <h3>Les réalisateurs de Top Gun & Top Gun Maverick</h3>
+            <div class="film_article_image_dual">
+            <img class="film_article_image_" src="../public/img/Tony_Scoot.webp" alt="Photo de Tony Scoot">
+            <img  class="film_article_image_"src="../public/img/Joseph_Kosinski.webp" alt="Photo de Joseph Kosinski">
+            </div>
+            <h3 class="film_article_texte_tittle_center">Les réalisateurs de Top Gun & Top Gun Maverick</h3>
         </article>
         <article>
-            <h3>En savoir plus sur le réalisateur,</h3>
-            <p>A l’origine, les deux films Top Gun n’ont pas été réaliser par le même le réalisateur :</p>
-            <p>Tony Scott, pour celui de 1986 et Joseph Kosinski pour celui sorti en 2022.</p>
-            <p>Tony Scott malheureusement décédé nous allons plus tôt vous présenter Joseph Kosinki sans pour autant blâmer les mérites de 
+            <h3 class="film_article_texte_tittle">En savoir plus sur le réalisateur,</h3>
+            <p class="film_article_texte_content">A l’origine, les deux films Top Gun n’ont pas été réaliser par le même le réalisateur :</p>
+            <p class="film_article_texte_content">Tony Scott, pour celui de 1986 et Joseph Kosinski pour celui sorti en 2022.</p>
+            <p class="film_article_texte_content">Tony Scott malheureusement décédé nous allons plus tôt vous présenter Joseph Kosinki sans pour autant blâmer les mérites de 
                 celui-ci.</p>
-            <p>Joseph Kosinki né le 3 mai 1974 à Marshalltown dans l’Iowa. 
+            <p class="film_article_texte_content">Joseph Kosinki né le 3 mai 1974 à Marshalltown dans l’Iowa. 
                 C’est un réalisateur reconnu dans le domaine de l’infographie et l’imagerie générée par ordinateur.
                 Il fait ses débuts sur grand écran avec le film de science-fiction « Disney Digital 3-D Tron : L’héritage. (suite du film de 1982 Tron).</p>
-            <p>Son œuvre précédente a été principalement constituée de publicités notamment : Starry Night, la bande d’annonce officiel de Halo 3 et Mad World, la bande d’annonce officiel de Gears of War.</p>
-            <p>Il réalise également Top Gun Maverick sorti en 2022.</p>
-            <img src="../public/img/Filmographie.webp" alt="Image d'illustration de la Filmographie">
+            <p class="film_article_texte_content">Son œuvre précédente a été principalement constituée de publicités notamment : Starry Night, la bande d’annonce officiel de Halo 3 et Mad World, la bande d’annonce officiel de Gears of War.</p>
+            <p class="film_article_texte_content">Il réalise également Top Gun Maverick sorti en 2022.</p>
+            <img class="film_article_image_secondary" src="../public/img/Filmographie.webp" alt="Image d'illustration de la Filmographie">
         </article>
         <article>
-            <h3>Filmographie du réalisateur</h3>
-            <p>Ci-dessous la filmographie de Joseph Kosinski</p>
-            <h3>Longs métrages</h3>
+            <h3 class="film_article_texte_tittle">Filmographie du réalisateur</h3>
+            <p class="film_article_texte_content_italic">Ci-dessous la filmographie de Joseph Kosinski</p>
+            <h3 class="film_article_texte_tittle_italic">Longs métrages</h3>
             <ul>
-                <li>2010 : Tron : L'Héritage</li>
-                <li>2013 : Oblivion</li>
-                <li>2017 : Line of Fire</li>
-                <li>2022 : Spiderhead</li>
+                <li class="film_article_texte_list">2010 : Tron : L'Héritage</li>
+                <li class="film_article_texte_list">2013 : Oblivion</li>
+                <li class="film_article_texte_list">2017 : Line of Fire</li>
+                <li class="film_article_texte_list">2022 : Spiderhead</li>
             </ul>
-            <h3>Court métrage</h3>
+            <h3 class="film_article_texte_tittle_italic">Court métrage</h3>
             <ul>
-                <li>2008 : TR2N</li>
+                <li class="film_article_texte_list">2008 : TR2N</li>
             </ul>
-            <h3>Publicités</h3>
+            <h3 class="film_article_texte_tittle_italic">Publicités</h3>
             <ul>
-                <li>2006 : Gears of War : Mad World</li>
-                <li>2006 : Halo 3 : Starry Night</li>
-                <li>2011 : Halo 4 : Awakening</li>
+                <li class="film_article_texte_list">2006 : Gears of War : Mad World</li>
+                <li class="film_article_texte_list">2006 : Halo 3 : Starry Night</li>
+                <li class="film_article_texte_list">2011 : Halo 4 : Awakening</li>
             </ul>
-            <img src="../public/img/Gears_of_war.webp" alt="Image Gears of war">
-            <p>Gears of War est un jeu vidéo créée par Epic Games, c'est un jeux vidéo de tir en 3nd personne (TPS)</p>
-            <img src="../public/img/Halo_3.webp" alt="Image Halo 3">
-            <p>Halo 3 est un jeu vidéo créée par Bungie Studios, c'est un jeux vidéo de tir a la 1ere personne (FPS)</p>
-            <img src="../public/img/Halo_4.webp" alt="Image Halo 4">
-            <p>Halo 4 est un jeu vidéo créée par 343 Industries, c'est un jeux viéo de tir a ma 1ere personne (FPS)(suite de Halo 3)</p>
+            <img class="film_article_image_secondary" src="../public/img/Gears_of_war.webp" alt="Image Gears of war">
+            <p class="film_article_texte_content_center">Gears of War est un jeu vidéo créée par Epic Games, c'est un jeux vidéo de tir en 3nd personne (TPS)</p>
+            <img class="film_article_image_secondary" src="../public/img/Halo_3.webp" alt="Image Halo 3">
+            <p class="film_article_texte_content_center">Halo 3 est un jeu vidéo créée par Bungie Studios, c'est un jeux vidéo de tir a la 1ere personne (FPS)</p>
+            <img class="film_article_image_secondary" src="../public/img/Halo_4.webp" alt="Image Halo 4">
+            <p class="film_article_texte_content_center">Halo 4 est un jeu vidéo créée par 343 Industries, c'est un jeux viéo de tir a ma 1ere personne (FPS)(suite de Halo 3)</p>
         </article>
         <article>
-            <h3>Pour plus d'informations :</h3>
-            <p>Top Gun :</p>
-            <a href="https://fr.wikipedia.org/wiki/Top_Gun_(film)">https://fr.wikipedia.org/wiki/Top_Gun_(film)</a>
-            <p>Top Gun Maverick :</p>
-            <a href="https://fr.wikipedia.org/wiki/Top_Gun_:_Maverick">https://fr.wikipedia.org/wiki/Top_Gun_:_Maverick</a>
+            <h3 class="film_article_texte_tittle">Pour plus d'informations :</h3>
+            <p class="film_article_texte_content">Top Gun :</p>
+            <a class="film_article_texte_link" href="https://fr.wikipedia.org/wiki/Top_Gun_(film)">https://fr.wikipedia.org/wiki/Top_Gun_(film)</a>
+            <p class="film_article_texte_content">Top Gun Maverick :</p>
+            <a class="film_article_texte_link" href="https://fr.wikipedia.org/wiki/Top_Gun_:_Maverick">https://fr.wikipedia.org/wiki/Top_Gun_:_Maverick</a>
         </article>
 
     </main>
